--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,83 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  max-width: 2000px;
+  margin: 0 auto;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.content {
+  min-height: calc(100vh - 2.5rem - 4.75rem);
 }
 
-* {
-  box-sizing: border-box;
+.banner {
+  position: relative;
+  height: 500px;
+  background-image: url("/images/horizontal-grinder-full.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+
+.banner-box {
+  position: absolute;
+  max-width: 1100px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.home-icon-separator {
+  max-width: 1200px;
+}
+
+.special-icon {
+  width: 4.63rem;
+}
+
+.why-choose-banner {
+  position: relative;
+  height: 550px;
+  background-image: url("/images/chipper.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+
+.call-us-box {
+  max-width: 420px;
+}
+
+.logo-image {
+  max-width: 500px;
+}
+
+.call-us-banner {
+  position: relative;
+  background-image: url("/images/chipper.jpg");
+  background-size: cover;
+  background-position: center center;
+}
+
+.enquiry-form {
+  max-width: 700px;
+}
+
+@media (min-width: 640px) {
+}
+
+@media (min-width: 768px) {
+  .banner {
+    height: 600px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .banner-box {
+    transform: translate(-60%, -50%);
+  }
+  .why-choose-banner {
+    height: 400px;
+  }
 }
